--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "snowpack dev",
+    "build": "snowpack build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
