--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "start": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,9 +24,7 @@
     "lit-html": "^2.8.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-sass": "^1.4.0",
-    "rollup": "^3.29.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "snowpack": "^3.7.1"
+    "netlify-cli": "^19.0.3",
+    "vite": "^6.2.3"
   }
 }
