Migrate from Snowpack to Vite (#4)
* Migrate from Snowpack to Vite

* fix: Netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@
   # This sample publishes the directory located at the absolute 
   # path "root/project/build-output"
 
-  publish = "build/"
+  publish = "dist/"
 
   # Default build command.
   command = "npm run build"
@@ -18,6 +18,12 @@
 # [functions]
 #   external_node_modules = ["express"]
 #   node_bundler = "esbuild"
+[dev]
+  command = "npm start"
+  targetPort = 5173
+  port = 8888
+  #publish = "dist" # If you use a _redirect file, provide the path to your static content folder
+
 [[redirects]]
   force = true
   from = "/api/*"
