--- a/netlify.toml
+++ b/netlify.toml
@@ -13,13 +13,13 @@
   publish = "dist/"
 
   # Default build command.
-  command = "npm run build"
+  command = "vite build"
 
 # [functions]
 #   external_node_modules = ["express"]
 #   node_bundler = "esbuild"
 [dev]
-  command = "npm start"
+  command = "npx vite"
   targetPort = 5173
   port = 8888
   #publish = "dist" # If you use a _redirect file, provide the path to your static content folder
