--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "vite",
+    "start": "npx netlify dev",
     "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
