--- a/netlify.toml
+++ b/netlify.toml
@@ -19,7 +19,7 @@
 #   external_node_modules = ["express"]
 #   node_bundler = "esbuild"
 [dev]
-  command = "npx vite"
+  command = "vite"
   targetPort = 5173
   port = 8888
   #publish = "dist" # If you use a _redirect file, provide the path to your static content folder
