Try do fix Netlify routes config

--- a/netlify.toml
+++ b/netlify.toml
@@ -34,3 +34,9 @@
   status = 200
   to = "/.netlify/functions/api/:splat"
 
+# Redirecionamento para SPA - todas as rotas vão para index.html
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
